# A-

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: candidate_breadth_2026-05-28.md  chatgpt_stock_knowledge.md  default_config_migration_2026-05-28.md  default_path_alignment_2026-05-28.md  default_path_evidence_gap_2026-05-28.md  execution_off_nav_proxy_2026-05-28.md  execution_off_portfolio_backtest_2026-05-28.md  execution_score_counterfactual_2026-05-28.md  execution_weight_sweep_2026-05-28.md  feature_store_throughput_2026-05-28.md  final_rank_assignment_audit_2026-05-28.md  final_rank_construction_2026-05-28.md  final_rank_rebuild_2026-05-28.md  h3_restore_or_retire_2026-05-28.md  h5_ranking_bottleneck_2026-05-28.md  hard_filter_plan_backtest_comparison_2026-05-31.md  hard_filter_plan_backtest_comparison_smoke_aug.md  hard_filter_plan_backtest_comparison_smoke_jan.md  hard_filter_plan_strategy_model_calibration_2026-06-01.md  heuristic_ablation_2026-05-28.md  launch_window_confidence_sweep_2026-05-28.md  launch_window_contribution_2026-05-28.md  model_source_availability_2026-05-28.md  news_impact_component.md  next_day_factor_model.md  one_year_multisource_factor_cluster.md  portfolio_backtester_refactor_plan_2026-05-28.md  quant_gate_longer_window_2026-05-28.md  quant_model_research_20260413.md  quant_score_contribution_2026-05-28.md  ranking_quality_portfolio_2026-05-28.md  scorer_audit_2026-05-28.md  selection_score_ablation_2026-05-28.md  selection_score_family_compression_2026-05-28.md  selection_score_source_audit_2026-05-28.md  (+14 more)
(+152 files in other folders)
